--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.2",
-    "@stripe/stripe-js": "^1.46.0",
+    "@stripe/stripe-js": "^1.54.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
-    "stripe": "^11.9.1",
+    "stripe": "^11.18.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -35,7 +36,7 @@
     "@angular/cli": "^14.2.1",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "autoprefixer": "^10.4.8",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
